Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img
-            src="./static/Sneha.logo.jpg"
+            src="Sneha.logo.jpg"
             alt="Logo"
             height="50"
             class="d-inline-block align-text-top"
@@ -133,3 +133,4 @@
     <script src="./scriptes6.js"></script>
   </body>
 </html>
+
